kubernetes/infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: https-fingo
      port: 443
      protocol: HTTPS
      hostname: fingo.ink
      tls:
        mode: Terminate
        certificateRefs:
          - name: fingo-tls
            namespace: apps
      allowedRoutes:
        namespaces:
          from: All
    
    - name: https-tanks
      port: 443
      protocol: HTTPS
      hostname: tanks.fingo.ink
      tls:
        mode: Terminate
        certificateRefs:
          - name: tanks-fingo-tls
            namespace: apps
      allowedRoutes:
        namespaces:
          from: All

    - name: https-alexstav
      port: 443
      protocol: HTTPS
      hostname: alexstav.dev
      tls:
        mode: Terminate
        certificateRefs:
          - name: alexstav-tls
            namespace: apps
      allowedRoutes:
        namespaces:
          from: All
    
    - name: https-mark-alldevops
      port: 443
      protocol: HTTPS
      hostname: mark.alldevops.ru
      tls:
        mode: Terminate
        certificateRefs:
          - name: mark-alldevops-tls
            namespace: apps
      allowedRoutes:
        namespaces:
          from: All
